syntax = "proto3";

package v1;

option go_package = "github.com/garethgeorge/resticui/go/proto/v1";

message Event {
  // timestamp is the number of milliseconds since the Unix epoch.
  int64 timestamp = 1 [json_name="timestamp"];

  oneof event {
    LogEvent log = 3 [json_name="log"];
    BackupStatusEvent backup_status_change = 4 [json_name="backup_status"];
  }
}

message LogEvent {
  string message = 1 [json_name="message"];
}

message BackupStatusEvent {
  string plan = 1 [json_name="plan"];
  Status status = 2 [json_name="status"];
  uint32 percent = 3 [json_name="percent"];
}

enum Status {
  UNKNOWN = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}